--- a/new.html
+++ b/new.html
@@ -84,4 +84,17 @@
         </div>
 
         <div class="download-in-pdf-doc-or-txt-parent">
-          <div class="download-in-pdf">Download in PDF, Doc or
+          <div class="download-in-pdf">Download in PDF, Doc or Txt</div>
+          <div class="ellipse-parent2">
+            <div class="group-inner"></div>
+            <div class="div1">3</div>
+          </div>
+        </div>
+
+        <img class="desktop-1-item img-fluid" alt="" src="./public/arrow-1.svg">
+
+        <img class="arrow-icon img-fluid" alt="" src="./public/arrow-1.svg">
+      </div>
+    </div>
+  </div>
+
