--- a/new.html
+++ b/new.html
@@ -94,7 +94,99 @@
         <img class="desktop-1-item img-fluid" alt="" src="./public/arrow-1.svg">
 
         <img class="arrow-icon img-fluid" alt="" src="./public/arrow-1.svg">
+      
+      <div class="explore-a-diverse">
+        <p>
+          Explore a diverse selection of user-friendly resume templates,
+          complemented by expert guidance. Ensure a polished and professional
+          resume structure using pre-approved templates. Select a template that
+          aligns seamlessly with your industry by choosing appropriate colors,
+          fonts, and text sizes. Craft a standout resume effortlessly with our
+          comprehensive tools.
+        </p>
+        <img class="group-icon img-fluid" alt="" src="./public/group-13.svg" />
       </div>
-    </div>
-  </div>
 
+      <div class="button d-flex justify-content-center mt-4 mb-4">
+        <img class="button-bg-icon img-fluid" alt="" src="./public/button-bg.svg" />
+
+        <div class="normal">BUILD MY RESUME</div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="craft-your-resume-swiftly-and-parent">
+            <div class="craft-your-resume">
+              <p>
+                Craft your resume swiftly and effortlessly using our online resume
+                builder. Explore a collection of professional templates
+                accompanied by step-by-step guidance. Simply choose a template,
+                and let our expert tips walk you through the entire process.
+                Creating a resume has never been this seamless.
+              </p>
+              <a href="#" class="choose-a-template">Choose a template</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="tailor-your-resume-to-cater-to-wrapper">
+            <div class="tailor-your-resume">
+              <p>
+                Tailor your resume to cater to a range of industries, showcasing
+                your versatile skill set and adaptability across diverse
+                professional landscapes. This approach underscores your ability
+                to excel in different sectors, making you a compelling
+                candidate for various opportunities. Craft a resume that
+                reflects your versatility and stands out in any industry.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row mt-4">
+        <div class="col-md-6">
+          <div class="experience-a-resume-makeover-l-parent">
+            <div class="experience-a-resume">
+              <p>
+                Experience a resume makeover like never before! With our
+                cutting-edge platform, you can transform and refine your resume
+                instantly. Upload your old resume and watch as our powerful
+                tool automatically revitalizes it, ensuring a polished and
+                professional presentation. Say goodbye to formatting hassles
+                and hello to a revamped resume that truly showcases your
+                skills and accomplishments. Elevate your career journey with
+                the speed and precision of instant transformation.
+              </p>
+              <a href="#" class="transform-and-refine">Transform and refine your resume instantly</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="engage-in-the-transformative-p-parent">
+            <div class="experience-a-resume">
+              <p>
+                Engage in the transformative process of creating your resume
+                with our innovative real-time preview feature. Witness your
+                resume come to life instantly as you make edits and
+                adjustments. With the dynamic experience, you have the power
+                to see the impact of every change in real-time, ensuring that
+                your resume reflects your professional story with precision.
+                Witness the resume evolve before your eyes.
+              </p>
+              <a href="#" class="transform-and-refine">Experience your resume come to life with real-time preview</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row mt-4">
+        <div class="col-md-6">
+          <div class="elevate-your-job-application-w-parent">
+            <div class="elevate-your-job">
+              <p>
+                Elevate your job application with a professionally crafted cover
+                letter that complements your resume seamlessly. With our
+                user-friendly platform, you can effortlessly create a matching
+                cover letter in just a few minutes. Tailor your message to
+                align perfectly with your resume, showcasing a cohesive
