--- a/new.html
+++ b/new.html
@@ -185,8 +185,13 @@
           <div class="elevate-your-job-application-w-parent">
             <div class="elevate-your-job">
               <p>
-                Elevate your job application with a professionally crafted cover
-                letter that complements your resume seamlessly. With our
-                user-friendly platform, you can effortlessly create a matching
-                cover letter in just a few minutes. Tailor your message to
-                align perfectly with your resume, showcasing a cohesive
+                          Elevate your job application with a professionally crafted cover
+          letter that complements your resume seamlessly. With our user-friendly
+          platform, you can effortlessly create matching cover letter in just
+          few minutes. Tailor your message to align perfectly with yor resume,
+          showcasing a cohesive and compelling narrative to potential employers.
+          Experience the ease and efficiency of producing a polished cover
+          letter enhances your job application and highlights your unique
+          qualifications
+</p>
+        </div>
