--- a/new.html
+++ b/new.html
@@ -195,3 +195,47 @@
           qualifications
 </p>
         </div>
+
+<div class="craft-a-matching">Craft a matching cover letter</div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="experience-a-resume">
+        Enhance your project effortlessly by incorporating pre-designed content crafted by industry experts. Benefit from the wealth of knowledge and experience as you seamlessly integrate expert-approved material into your work. Save time and ensure the quality of your project by leveraging the insights of professionals in the field. Elevate your content with the expertise it deserves
+      </div>
+      <div class="transform-and-refine">
+        Elevate your work with expert-endorsed content
+      </div>
+    </div>
+  </div>
+</div>
+<img class="desktop-1-child1" alt="" src="./public/arrow-3.svg" />
+<div class="ellipse-parent3">
+  <div class="group-inner"></div>
+  <div class="div1">3</div>
+</div>
+<img class="desktop-1-child2" alt="" src="./public/arrow-4.svg" />
+<div class="ellipse-parent4">
+  <div class="group-inner"></div>
+  <div class="div1">4</div>
+</div>
+<img class="desktop-1-child3" alt="" src="./public/arrow-5.svg" />
+<div class="ellipse-parent5">
+  <div class="group-inner"></div>
+  <div class="div1">5</div>
+  <div class="ellipse-parent6">
+    <div class="group-inner"></div>
+    <div class="div1">6</div>
+  </div>
+  <img class="group-child8" alt="" src="./public/arrow-51.svg" />
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="unleash-your-potential">
+        Unleash your potential and craft an endless array of resumes effortlessly. Our platform empowers you to create resumes in the widely used PDF, DOC and TXT formats. Whether you’re tailoring your resume for various job opportunities or exploring different styles, the possibilities are infinite. Enjoy the flexibility to save and share your resume in the format that suits your needs. Freedom to generate as many versions as your career journey demands.
+      </div>
+    </div>
+  </div>
+</div>
