--- a/new.html
+++ b/new.html
@@ -239,3 +239,41 @@
     </div>
   </div>
 </div>
+
+
+<div class="generate-limitless-resumes">
+  Generate limitless resumes in PDF, DOC, and TXT formats
+</div>
+</div>
+<img class="desktop-1-child4" alt="" src="./public/arrow-6.svg" />
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="group-parent">
+        <div class="ivy-league-cover-letter-templa-parent">
+          <img class="ivy-league-cover-letter-templa-icon" alt="" src="./public/ivy-league-cover-letter-template-1-439b5cab58@2x.png" />
+
+          <img class="button-icon" alt="" src="./public/button@2x.png" />
+        </div>
+        <div class="modern-resume-template-76d7bee-parent">
+          <img class="modern-resume-template-76d7bee-icon" alt="" src="./public/modern-resume-template-76d7bee386@2x.png" />
+
+          <img class="button-icon" alt="" src="./public/button1@2x.png" />
+        </div>
+        <div class="stylish-resume-template-1-1582-parent">
+          <img class="ivy-league-cover-letter-templa-icon" alt="" src="./public/stylish-resume-template-1-15829f205b@2x.png" />
+
+          <img class="button-icon2" alt="" src="./public/button2@2x.png" />
+        </div>
+        <div class="creative-resume-template-1-686-parent">
+          <img class="modern-resume-template-76d7bee-icon" alt="" src="./public/creative-resume-template-1-6868a07f7c@2x.png" />
+
+          <img class="button-icon3" alt="" src="./public/button3@2x.png" />
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="rezime-ai-resume">Rezime AI Resume Builder FAQs</div>
+<img class="rezime-logo-main-nob-1" alt="" src="./public/rezime-logo-main-nob-1@2x.png" />
