--- a/new.html
+++ b/new.html
@@ -277,3 +277,90 @@
 </div>
 <div class="rezime-ai-resume">Rezime AI Resume Builder FAQs</div>
 <img class="rezime-logo-main-nob-1" alt="" src="./public/rezime-logo-main-nob-1@2x.png" />
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="what-is-a-resume-builder-parent">
+        <div class="what-is-a">What is a resume builder?</div>
+        <div class="a-resume-builder">
+          A resume builder is an online tool or software that assists individuals in creating and formatting their resumes. It typically provides templates, prompts, and guidance to help users input their professional information, skills, and experiences. The purpose of a resume builder is to simplify the resume creation process, ensuring that the document is well-organized, visually appealing, and tailored to industry standards. Users can often choose from various templates, customize content, and generate a professional-looking resume that reflects their qualifications and achievements.
+        </div>
+      </div>
+      <div class="is-rezime-ai-builder-free-parent">
+        <div class="is-rezime-ai">Is Rezime AI builder free?</div>
+        <div class="rezime-ai-resume1">
+          Rezime AI resume builder is free to use for creating resumes, CVs, and cover letters. Pay only if satisfied, with options to download your document for free as a text file or choose a premium plan for PDF or MS Word downloads at a cost of 2.99 USD for a two-week trial. Pricing may vary based on the subscription plan selected.
+        </div>
+      </div>
+      <div class="is-it-neccessary-to-tailor-my-wrapper">
+        <div class="is-it-neccessary">
+          Is it necessary to tailor my resume for each job application?
+        </div>
+      </div>
+      <div class="how-long-does-it-takes-to-make-parent">
+        <div class="is-it-neccessary">
+          How long does it take to make a resume?
+        </div>
+        <div class="harness-the-efficiency">
+          Harness the efficiency of Rezime’s Resume Builder, where crafting your resume becomes a swift and seamless task, taking as little as 10-15 minutes. Simply choose a template, input your information into the user-friendly interface, and eliminate the guesswork and formatting complexities that often prolong the process. Streamline your resume creation with precision and speed, ensuring a polished document that perfectly represents your qualifications.
+        </div>
+      </div>
+      <div class="yes-you-absolutely-container">
+        <p class="your-gateway-to">
+          Yes! You absolutely should! Crafting a distinct resume for each job application significantly enhances your likelihood of securing the position. Generic resumes lack the impact of a targeted one.
+        </p>
+        <p class="your-gateway-to">&nbsp;</p>
+        <p class="free-resume-builder">
+          In our resume generator, upon entering your desired job title, you receive tailored suggestions for skills, resume profiles, and other areas that can be refined. Additionally, you can effortlessly duplicate, modify, and save each resume you create. This streamlined process enables you to customize your resume for each job application in under 5 minutes, eliminating the need to send the same resume.
+        </p>
+      </div>
+      <div class="rectangle-div"></div>
+      <img class="desktop-1-child5" alt="" src="./public/group-47.svg" />
+      <img class="desktop-1-child6" alt="" src="./public/group-46.svg" />
+      <div class="build-your-customized">Build your customized resume now</div>
+      <img class="rezime-logo-main-horizontal-no" alt="" src="./public/rezimelogomain-horizontal-nobg-1@2x.png" />
+      <div class="rezime-is-a">
+        Rezime is a minimalistic and straightforward resume builder that is completely secure and focuses on clean design, user data privacy, quick ease of use, and easy resume updates. If you are someone who cares about any of these issues, this is for you!
+      </div>
+      <div class="call-us-234-812-456-6789-parent">
+        <div class="call-us-234-container">
+          <span>Call Us</span>
+          <span class="span">: +234 812 456 6789</span>
+        </div>
+        <div class="email-us-inforezimecom-container">
+          <span>Email Us:</span>
+          <span class="span"> info@rezime.com</span>
+        </div>
+      </div>
+      <div class="resume-builder-resume-container">
+        <p class="free-resume-builder">Resume Builder</p>
+        <p class="free-resume-builder">&nbsp;</p>
+        <p class="free-resume-builder">Resume Template</p>
+        <p class="free-resume-builder">&nbsp;</p>
+        <p class="free-resume-builder">Resume Format</p>
+        <p class="free-resume-builder">&nbsp;</p>
+        <p class="free-resume-builder">Resume Help</p>
+      </div>
+      <div class="resume">Resume</div>
+      <div class="cover-letter-builder-container">
+        <p class="cover-letter">Cover Letter Builder</p>
+        <p class="free-resume-builder">&nbsp;</p>
+        <p class="free-resume-builder">Cover Letter Template</p>
+        <p class="free-resume-builder">&nbsp;</p>
+        <p class="free-resume-builder">Cover Letter Format</p>
+        <p class="free-resume-builder">&nbsp;</p>
+        <p class="free-resume-builder">Cover Letter Help</p>
+      </div>
+      <div class="about-us-contact-container">
+        <p class="free-resume-builder">About Us</p>
+        <p class="free-resume-builder">&nbsp;</p>
+        <p class="free-resume-builder">Contact Us</p>
+        <p class="free-resume-builder">&nbsp;</p>
+        <p class="free-resume-builder">Privacy Policy</p>
+        <p class="free-resume-builder">&nbsp;</p>
+        <p class="free-resume-builder">Terms and Conditions</p>
+      </div>
+    </div>
+  </div>
+</div>
