--- a/new.html
+++ b/new.html
@@ -364,3 +364,82 @@
     </div>
   </div>
 </div>
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="cover-letter1">Cover Letter</div>
+      <div class="support">Support</div>
+      <img class="line-icon" alt="" src="#" />
+      <img class="stylish-resume-template-1-1582-icon1" alt="" src="./public/stylish-resume-template-1-15829f205b1@2x.png" />
+      <img class="creative-resume-template-1-686-icon1" alt="" src="./public/creative-resume-template-1-6868a07f7c1@2x.png" />
+      <img class="modern-resume-template-76d7bee-icon1" alt="" src="./public/modern-resume-template-76d7bee3861@2x.png" />
+      <img class="double-column-resume-template-icon" alt="" src="./public/double-column-resume-template-enhancv-1-d747b76f51@2x.png" />
+      <div class="button1">
+        <img class="button-bg-icon1" alt="" src="./public/button-bg.svg" />
+        <div class="normal1">BUILD MY RESUME</div>
+      </div>
+      <img class="ivy-league-cover-letter-templa-icon1" alt="" src="./public/ivy-league-cover-letter-template-1-439b5cab581@2x.png" />
+      <div class="desktop-1-inner1">
+        <div class="ellipse-parent7">
+          <div class="group-child9"></div>
+          <div class="div9">&lt;</div>
+        </div>
+      </div>
+      <img class="creative-resume-template-1-686-icon2" alt="" src="./public/creative-resume-template-1-6868a07f7c2@2x.png" />
+      <img class="double-column-resume-template-icon1" alt="" src="./public/double-column-resume-template-enhancv-1-d747b76f511@2x.png" />
+      <img class="modern-resume-template-76d7bee-icon2" alt="" src="./public/modern-resume-template-76d7bee3862@2x.png" />
+      <div class="desktop-1-inner2">
+        <div class="ellipse-parent7">
+          <div class="group-child9"></div>
+          <div class="div10">&gt;</div>
+        </div>
+      </div>
+      <div class="button2">
+        <img class="button-bg-icon1" alt="" src="./public/button-bg.svg" />
+        <div class="normal1">BUILD MY RESUME</div>
+      </div>
+      <div class="button3">
+        <img class="button-bg-icon1" alt="" src="./public/button-bg1.svg" />
+        <div class="normal1">MORE INDUSTRIES</div>
+      </div>
+      <div class="button4">
+        <img class="button-bg-icon1" alt="" src="./public/button-bg.svg" />
+        <div class="normal1">BUILD MY RESUME</div>
+      </div>
+      <img class="vector-icon1" alt="" src="./public/vector1.svg" />
+      <img class="desktop-1-child7" alt="" src="./public/group-58.svg" />
+      <img class="desktop-1-child8" alt="" src="./public/group-59.svg" />
+      <img class="desktop-1-child9" alt="" src="./public/group-60.svg" />
+      <img class="curve-arrow-1" alt="" src="./public/curve-arrow-1@2x.png" />
+      <img class="curve-arrow-2" alt="" src="./public/curve-arrow-1@2x.png" />
+      <div class="rectangle-parent">
+        <div class="group-child11"></div>
+        <div class="group-container">
+          <div class="rectangle-group">
+            <div class="group-child12"></div>
+            <div class="resume-templates-wrapper">
+              <div class="resume-templates">Resume Templates</div>
+            </div>
+          </div>
+          <div class="rectangle-container">
+            <div class="group-child13"></div>
+            <div class="recommended-wrapper">
+              <div class="recommended">Recommended</div>
+            </div>
+          </div>
+          <div class="rectangle-parent1">
+            <div class="group-child14"></div>
+            <div class="more-templates-wrapper">
+              <div class="more-templates">More Templates</div>
+            </div>
+          </div>
+          <div class="creative-resume-template-1-686-group">
+            <img class="creative-resume-template-1-686-icon3" alt="" src="./public/creative-resume-template-1-6868a07f7c3@2x.png" />
+            <img class="double-column-resume-template-icon2" alt="" src="./public/double-column-resume-template-enhancv-1-d747b76f512@2x.png" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
