--- a/new.html
+++ b/new.html
@@ -443,3 +443,129 @@
     </div>
   </div>
 </div>
+
+<div class="container">
+    <div class="rectangle-parent2">
+      <div class="group-child15"></div>
+      <div class="group-parent1">
+        <div class="rectangle-parent3">
+          <div class="group-child16"></div>
+          <div class="preview-resume-wrapper">
+            <div class="preview-resume">Preview Resume</div>
+          </div>
+        </div>
+        <img class="group-child17" alt="" src="./public/group-72@2x.png" />
+      </div>
+    </div>
+    <div class="rectangle-parent4">
+      <div class="group-child18"></div>
+      <img class="work-1-icon" alt="" src="./public/work-1@2x.png" />
+    </div>
+    <div class="group-parent2">
+      <div class="rectangle-parent5">
+        <div class="group-child19"></div>
+        <div class="were-here-to">
+          We're here to assist you in developing your resume.
+        </div>
+        <div class="generate-new-resume">Generate New Resume</div>
+        <img class="writing-svgrepo-com-1-icon" alt="" src="./public/writingsvgrepocom-1.svg" />
+      </div>
+      <div class="rectangle-parent6">
+        <div class="group-child19"></div>
+        <img class="upload-file-svgrepo-com-1-icon" alt="" src="./public/uploadfilesvgrepocom-1.svg" />
+        <div class="well-restructure-and">
+          We'll restructure and input your details to save you the effort.
+        </div>
+        <div class="i-already-have">I Already have A Resume</div>
+      </div>
+    </div>
+    <div class="rectangle-parent7">
+      <div class="group-child21"></div>
+      <div class="group-parent3">
+        <img class="group-child22" alt="" src="./public/group-78@2x.png" />
+        <img class="layer1-icon" alt="" src="./public/layer1@2x.png" />
+        <img class="page-1-icon" alt="" src="./public/page1.svg" />
+        <div class="page-1">
+          <img class="add-icon" alt="" src="./public/add.svg" />
+          <img class="doc-icon" alt="" src="./public/doc.svg" />
+        </div>
+      </div>
+    </div>
+    <div class="desktop-1-inner3">
+      <div class="vector-parent">
+        <img class="vector-icon2" alt="" src="./public/vector2.svg" />
+        <img class="vector-icon3" alt="" src="./public/vector3.svg" />
+        <div class="rectangle-parent8">
+          <div class="group-child23"></div>
+          <img class="vector-icon4" alt="" src="./public/vector4.svg" />
+        </div>
+        <div class="rectangle-parent9">
+          <div class="group-child23"></div>
+          <img class="vector-icon5" alt="" src="./public/vector5.svg" />
+        </div>
+      </div>
+    </div>
+    <div class="group-parent4">
+      <img class="group-child25" alt="" src="./public/group-54.svg" />
+      <div class="copyright-2023-all">
+        Copyright 2023. All rights reserved
+      </div>
+    </div>
+    <div class="group-parent5">
+      <div class="rectangle-wrapper">
+        <div class="group-child26"></div>
+      </div>
+      <div class="cover-letter-template-cubic3x-parent">
+        <img class="cover-letter-template-cubic3x-icon" alt="" src="./public/coverlettertemplatecubic3x-1@2x.png" />
+        <img class="cover-letter-templates-icon" alt="" src="./public/coverlettertemplates@2x.png" />
+      </div>
+    </div>
+    <div class="button5">
+      <img class="button-bg-icon1" alt="" src="./public/button-bg2.svg" />
+      <div class="normal1">My Account</div>
+    </div>
+    <div class="rectangle-parent10">
+      <div class="group-child27"></div>
+      <img class="rezime-logo-main-horizontal-no1" alt="" src="./public/rezimelogomain-horizontal-nobg-11@2x.png" />
+      <div class="about">About</div>
+      <div class="component-1">
+        <div class="component-1-inner">
+          <div class="tools-parent">
+            <div class="tools">Tools</div>
+            <img class="arrow-drop-down" alt="" src="./public/arrow-drop-down.svg" />
+          </div>
+        </div>
+        <div class="resume-builder1">Resume Builder</div>
+        <div class="cover-letter-builder">Cover Letter Builder</div>
+      </div>
+      <div class="component-3">
+        <div class="component-3-inner">
+          <div class="tools-parent">
+            <div class="tools">Cover Letter</div>
+            <img class="arrow-drop-down" alt="" src="./public/arrow-drop-down1.svg" />
+          </div>
+        </div>
+        <div class="resume-builder2">Resume Builder</div>
+        <div class="cover-letter-builder1">Cover Letter Builder</div>
+      </div>
+      <div class="component-2">
+        <div class="component-2-inner">
+          <div class="tools-parent">
+            <div class="tools">Resume</div>
+            <img class="arrow-drop-down" alt="" src="./public/arrow-drop-down2.svg" />
+          </div>
+        </div>
+        <div class="resume-builder3">Resume Builder</div>
+        <div class="cover-letter-builder2">Cover Letter Builder</div>
+      </div>
+      <div class="button6">
+        <img class="button-bg-icon1" alt="" src="./public/button-bg3.svg" />
+        <div class="normal1">My Account</div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
