--- a/workstyle1.html
+++ b/workstyle1.html
@@ -89,24 +89,40 @@
 <br><br><br><br><br><br><br>
 <div class="container-fluid">
     <div class="progress-container">
-        <div class="progress-step">
-            <span class="step-circle ">1</span>
-            <span class="step-text">Target Jobs</span>
-        </div>
-        <div class="progress-step">
-            <span class="step-circle">2</span>
-            <span class="step-text">Background</span>
-        </div>
-        <div class="progress-step">
-            <span class="step-circle current">3</span>
-            <span class="step-text">Work Style</span>
-        </div>
-        <div class="progress-step">
-            <span class="step-circle">4</span>
-            <span class="step-text">Finalize</span>
-        </div>
+      <div class="progress-step">
+        <span class="step-circle ">1</span>
+        <span class="step-text">Target Jobs</span>
+      </div>
+      <div class="progress-step">
+        <span class="step-circle">2</span>
+        <span class="step-text">Background</span>
+      </div>
+      <div class="progress-step">
+        <span class="step-circle current">3</span>
+        <span class="step-text">Work Style</span>
+      </div>
+      <div class="progress-step">
+        <span class="step-circle">4</span>
+        <span class="step-text">Finalize</span>
+      </div>
     </div>
     <h2 class="text-center">How many years of experience do you have?</h2>
-    <p class="text-center">You can include internships, unofficial jobs or volunteer work.</p>
-<div>
+    <p class="text-center">You can include internships, unofficial jobs, or volunteer work.</p>
+  
+    <div class="years-experience-container">
+      <button class="years-experience-button">Less than one</button>
+      <div class="years-experience-circles">
+        <span class="years-experience-circle">1</span>
+        <span class="years-experience-circle">2</span>
+        <span class="years-experience-circle">3</span>
+        <span class="years-experience-circle">4</span>
+        <span class="years-experience-circle">5</span>
+        <span class="years-experience-circle">6</span>
+        <span class="years-experience-circle">7</span>
+        <span class="years-experience-circle">8</span>
+        <span class="years-experience-circle">9</span>
+        <span class="years-experience-circle">10+</span>
+      </div>
+    </div>
+  </div>
 </body>
