--- a/workstyle1.html
+++ b/workstyle1.html
@@ -51,10 +51,10 @@
             <!-- Start Navigation -->
             <nav id="mainNav" class="navbar navbar-default navbar-fixed white bootsnav on no-full nav-box no-background">
 
-                <div class="container">            
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
+                 <div class="container">            
+                    <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                         <i class="fa fa-bars"></i>
-                    </button>
+                    </button>  -->
                     
                     <!-- Start Header Navigation -->
                     <div class="navbar-header">
@@ -124,5 +124,12 @@
         <span class="years-experience-circle">10+</span>
       </div>
     </div>
-  </div>
+     
+</div>
+<br><br><br><br>
+<!-- Navigation Buttons with Inline Style for Correct Positioning -->
+<div style="display: flex; justify-content: space-between; padding: 0 10%;">
+    <button  style="background-color:blue;" type="button" class="btn btn-primary">Previous</button>
+    <button style="background-color:blue;" type="button" class="btn btn-primary">Next</button>
+</div>
 </body>
