--- a/workstyle2.html
+++ b/workstyle2.html
@@ -135,5 +135,22 @@
     <button  style="background-color:blue;" type="button" class="btn btn-primary">Previous</button>
     <button style="background-color:blue;" type="button" class="btn btn-primary">Next</button>
 </div>
+
+
+<!-- jQuery Frameworks
+    ============================================= -->
+    <script src="assets/js/jquery-1.12.4.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/equal-height.min.js"></script>
+    <script src="assets/js/jquery.appear.js"></script>
+    <script src="assets/js/jquery.easing.min.js"></script>
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="assets/js/modernizr.custom.13711.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/count-to.js"></script>
+    <script src="assets/js/wow.min.js"></script>
+    <script src="assets/js/jquery.backgroundMove.js"></script>
+    <script src="assets/js/bootsnav.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
