--- a/workstyle0.html
+++ b/workstyle0.html
@@ -111,8 +111,8 @@
   
     <div class="container">
         <div style="display: flex; justify-content: center; gap: 20px;">
-            <button style="background-color: blue; color: white; border-color: blue; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);" type="button" class="btn btn-primary">Yes</button>
-            <button style="background-color: white; color: blue; border-color: blue; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);" type="button" class="btn btn-primary">No</button>
+            <button style="background-color: #0052C1; width: 90px; color: white; border-color: #0052C1; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);" type="button" class="btn btn-primary">Yes</button>
+            <button style="background-color: white; width: 90px; color: #0052C1; border-color: #0052C1; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);" type="button" class="btn btn-primary">No</button>
         </div>
     </div>
     
@@ -122,9 +122,11 @@
 <br><br>
 <!-- Navigation Buttons with Inline Style for Correct Positioning -->
 <div style="display: flex; justify-content: space-between; padding: 0 10%;">
-    <button  style="background-color:blue;" type="button" class="btn btn-primary">Previous</button>
-    <button style="background-color:blue;" type="button" class="btn btn-primary">Next</button>
+    <button  style="background-color:#0052C1;" type="button" class="btn btn-primary"><span><</span>Previous</button>
+    <button style="background-color:#0052C1;" type="button" class="btn btn-primary">Next <span>></span></button>
 </div>
+
+
 <!-- jQuery Frameworks
     ============================================= -->
     <script src="assets/js/jquery-1.12.4.min.js"></script>
