--- a/workstyle3.html
+++ b/workstyle3.html
@@ -137,9 +137,11 @@
 <br>
 <!-- Navigation Buttons with Inline Style for Correct Positioning -->
 <div style="display: flex; justify-content: space-between; padding: 0 10%;">
-    <button  style="background-color:blue;" type="button" class="btn btn-primary">Previous</button>
-    <button style="background-color:blue;" type="button" class="btn btn-primary">Next</button>
+    <button  style="background-color:#0052C1;" type="button" class="btn btn-primary"><span><</span>Previous</button>
+    <button style="background-color:#0052C1;" type="button" class="btn btn-primary">Next <span>></span></button>
 </div>
+
+
 
 <script>
     function selectBox(element) {
