--- a/workstyle4.html
+++ b/workstyle4.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Boxass - Startup Landing Page Template">
+    <meta name="description" content="Resume - Ai resume creator">
 
     <!-- ========== Page Title ========== -->
     <title>Resume - Ai resume creator</title>
