--- a/payment.html
+++ b/payment.html
@@ -321,7 +321,7 @@ s<!DOCTYPE html>
     <!-- End Features Area -->
     
     <div class="container-fluid">
-      <h5 class="text-center">Copyright 2023. All rights reserved</h5>
+      <h5 class="text-center">&copy; 2023. All rights reserved.</h5>
     </div>
     
 
