--- a/summary.html
+++ b/summary.html
@@ -76,16 +76,27 @@
     <p class="text-left">Please review and edit your resume as needed, then download or share it with potential employers. </p>
     <div class="container">
         <div class="row align-items-center mb-2">
-            <!-- Edit Name on the left -->
+            <!-- Edit Name and More options on the left -->
             <div class="col d-flex align-items-left">
                 <i class="fas fa-edit me-2"></i>
                 <span>Edit Name</span>
-            </div>
+             <div class="btn-group col d-flex align-items-left">
+                <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    More Options
+                </button>
+                <div class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Option 1</a></li>
+                    <li><a class="dropdown-item" href="#">Option 2</a></li>
+                    <li><a class="dropdown-item" href="#">Option 3</a></li>
+                    <li><a class="dropdown-item" href="#">Option 4</a></li>
+                    <li><a class="dropdown-item" href="#">Option 5</a></li>
+                </div>
+              </div>
             <!-- More Options dropdown on the right -->
             <div class="col-auto align-self-right">
                 
                     <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                        More Options
+                        
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                         <li><a class="dropdown-item" href="#">Option 1</a></li>
