--- a/dashboard.html
+++ b/dashboard.html
@@ -26,7 +26,7 @@
 	<link href="vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
 	<link href="vendor/owl-carousel/owl.carousel.css" rel="stylesheet">
 	
-	<!-- Globle CSS -->
+	<!-- Global CSS -->
     <link href="css/style.css" rel="stylesheet">
 	
 </head>
